0.6 "" (released xx.xx.2010)

  * Remove the --force option. Local files are now never overwritten.
  * Added option alias -v for --verbose.
  * Added --verbose option to create command.
  * Added support for extracting, listing and testing multiple archives.
  * Fix permissions of extracted files: make them readable by the
    current user.
  * Added support for ACE (.ace) archives.
  * Added support for AR (.a) archives.

0.5 "Vanishing Point" (released 4.3.2010)

  * Ported to Python 2.4.
  * Added support for LZIP (.lz) archives.
  * Removed support for setting options via config file.

0.4 "Nikita" (released 3.3.2010)

  * Added support for Windows systems.
  * Added support for creating ZIP files.
  * Improved listing of available archive formats.
  * Improved recognition of MIME types.

0.3 "Management" (released 23.2.2010)

  * Better test if encodings of archive commands are supported
    (for example .tar.Z needs a decompress program).

0.2 "Birdy" (released 22.2.2010)

  * Add support for LZMA and XZ archives.

0.1 "Hard Boiled" (released 21.2.2010)

  * Initial release.