@@ -26,10 +26,11 @@ files without having to remember a myriad of programs and options.
 The archive format is determined by the file(1) program and as a fallback
 by the archive file extension.
 .PP
-\fBpatool\fP supports 7z (.7z), ACE (.ace), AR (.a), ZIP (.zip, .jar), GZIP (.gz), compress (.Z),
+\fBpatool\fP supports 7z (.7z), ACE (.ace), AR (.a), ZIP (.zip, .jar),
+GZIP (.gz), compress (.Z),
 BZIP2 (.bz2), TAR (.tar), ARJ (.arj), CAB (.cab), CPIO (.cpio),
-RPM (.rpm), DEB (.deb), LZIP (.lz), LZOP (.lzo), LZMA (.lzma), RAR (.rar)
-and XZ (.xz) formats.
+RPM (.rpm), DEB (.deb), LZH (.lha, .lzh), LZIP (.lz), LZOP (.lzo),
+LZMA (.lzma), RAR (.rar) and XZ (.xz) formats.
 It relies on helper applications to handle those archive formats
 (for example bzip2 for BZIP2 archives).
 .SH EXAMPLES
